--- a/feliz-dia-12/package.json
+++ b/feliz-dia-12/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "deploy": "vite build && gh-pages -d dist; git add dist/; git commit -m 'new deploy'; git push origin feat/homenagem"
+    "deploy": "vite build; gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -26,9 +26,10 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.5",
-    "tailwindcss": "^4.1.9",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
-  }
+  },
+  "homepage": "https://marcelo-santos-12.github.io/marcelo-santos.github.io"
 }
